--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 
 <body>
  <div class="login">
-	<h1>Jaipur's Air Quality Index Index</h1>
+	<h1> Air Quality Index Index</h1>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
